Clarify ECIP-1115 language to remove ambiguity
This update refines the Motivation and Specification sections of ECIP-1115 to eliminate ambiguous phrasing around smoothing, Treasury-held BASEFEE, miner incentives, and monetary policy. It strengthens clarity on governance-layer scope, consensus-layer neutrality, and the relationship to ECIP-1017, ECIP-1111, and ECIP-1112, while reducing redundancy and ensuring the document cannot be misinterpreted as modifying consensus-layer incentives or creating miner entitlements.

--- a/_specs/ecip-1115.md
+++ b/_specs/ecip-1115.md
@@ -13,7 +13,7 @@ license: CC0-1.0
 
 ### Simple Summary
 
-This ECIP introduces an optional governance-layer mechanism that smooths a configurable portion of Treasury-held BASEFEE revenue across a future window using a deterministic L-curve. The mechanism reshapes the timing of BASEFEE-derived incentives to provide a more predictable miner revenue profile as fixed issuance declines. All parameters are fully configurable through the Olympia Improvement Proposal (OIP) process.
+This ECIP introduces an optional governance-layer mechanism that smooths a configurable portion of Treasury-held BASEFEE revenue across a future window using a deterministic L-curve. The mechanism reshapes the timing of BASEFEE-derived incentives to provide a more predictable miner revenue profile if governance elects to use smoothing for miner payouts; this ECIP does not mandate such use, and smoothing remains entirely optional. All parameters are fully configurable through the Olympia Improvement Proposal (OIP) process.
 
 ### Abstract
 
@@ -25,9 +25,9 @@ Smoothed payouts are authorized solely through the Governor → Timelock → Exe
 
 As Ethereum Classic’s fixed-emission schedule (ECIP-1017) continues to reduce block subsidies over time, priority fees (tips—defined in Type-2 transactions as `maxPriorityFeePerGas` and implicit in `gasPrice` for Type-0 and Type-1) remain the primary consensus-level fee mechanism for miners. These variable priority fees directly reward block producers and continue to anchor Proof-of-Work incentives regardless of how the BASEFEE is handled.
 
-Under ECIP-1111 and ECIP-1112, 100% of the BASEFEE is redirected to the Olympia Treasury. Any decision to allocate a portion of that Treasury-held BASEFEE back to miners is optional, fully governed through OIPs, and intended to complement—not replace—the priority fee market.
+Under ECIP-1111 and ECIP-1112, 100% of the BASEFEE is redirected to the Olympia Treasury. Any decision to allocate a portion of that Treasury-held BASEFEE to miners is optional, fully governed through OIPs, and intended only to complement—not replace—the consensus-level priority-fee incentive mechanism.
 
-If the Olympia DAO elects to direct a percentage of Treasury-held BASEFEE toward long-term network security, those BASEFEE-derived allocations will inherently fluctuate with network activity. A smoothing mechanism can reshape the timing of these optional allocations, reducing short-term volatility and providing a more predictable payout profile without altering consensus-layer incentives.
+If the Olympia DAO elects to direct a percentage of Treasury-held BASEFEE toward long-term network security, governance MAY choose to route those allocations through governance-approved payouts, without creating any entitlement, expectation, or obligation toward miners or any other recipient class. These allocations will inherently fluctuate with network activity. A smoothing mechanism can reshape the timing of such allocations, reducing short-term volatility and providing a more predictable payout profile only if governance elects to activate it, all without altering consensus-layer incentives such as miner tips. This ECIP does not modify, reinterpret, or supplement the monetary policy defined under ECIP-1017; ECIP-1115 smoothing applies only to Treasury-held BASEFEE after deposit into the immutable Treasury defined in ECIP-1112, and affects solely the timing of governance-approved payouts, with no effect on issuance, BASEFEE computation, priority-fee mechanics, or any consensus-layer economic behavior.
 
 Critically, the smoothing framework allows Ethereum Classic to experiment with security-budget policies incrementally and empirically. Rather than setting hard monetary rules (as was done with ECIP-1017) without fee-market data, smoothing keeps BASEFEE-based miner incentives flexible, adjustable, and governance-driven. This design preserves consensus simplicity, avoids premature monetary commitments, and lets the network adapt as Type-2 fee markets mature post-Olympia.
 
@@ -74,11 +74,11 @@ The smoothing model defines only the timing and magnitude of intended allocation
 
 #### 3. Allocation Rule
 
-For each block *k*, the smoothing mechanism produces a sequence of intended allocations `A(k + j)` for `j = 1…N`, as defined in Section 2. These allocations represent scheduled future payouts that MAY be initiated through standard Treasury withdrawal semantics after approval via the governance pipeline defined in ECIP-1113 and ECIP-1114.
+For each block `k`, the smoothing mechanism produces a sequence of intended allocations `A(k + j)` for `j = 1…N`, as defined in Section 2. These allocations represent scheduled values that MAY be used as inputs to standard Treasury withdrawal semantics after approval via the governance pipeline defined in ECIP-1113 and ECIP-1114.
 
 Smoothing defines only the schedule of intended payouts; it does not create rights, claims, or automatic execution. All payouts MUST be explicitly authorized by governance through the OIP process or through a governance-approved smoothing module that prepares Treasury withdrawal calls conforming to ECIP-1114.
 
-Multiple smoothing schedules MAY overlap. For a given target index `t`, the cumulative intended allocation is the sum of all applicable contributions:
+Multiple smoothing schedules MAY overlap. For a given target index `t`, the cumulative intended allocation—not a liability, reserve, obligation, or claim upon Treasury funds—is the sum of all applicable contributions:
 
 `A_total(t) = Σ over all k such that (k + j = t) of A(k + j)`
 
@@ -92,7 +92,7 @@ This ECIP does not define buffering, queuing, or state-tracking requirements. An
 
 #### 4. Miner Distribution Mechanism
 
-Smoothed allocations define only the timing and magnitude of intended payouts. To convert these intended allocations into actual Treasury withdrawals, governance MAY designate a Miner Reward Module responsible for mapping approved smoothing outputs to specific recipient addresses.
+Smoothed allocations define only the hypothetical timing and magnitude of governance-controlled payouts and create no rights, claims, or reservations against Treasury-held funds. To convert any of these allocations into actual Treasury withdrawals, governance MAY designate a Miner Reward Module responsible for mapping approved smoothing outputs to specific recipient addresses. Such a module is optional, governance-defined, and MAY be used for any class of recipients—not only miners—and does not, by itself, create any entitlement, expectation, or preferential claim to Treasury-held BASEFEE for miners or any other group.
 
 The Miner Reward Module operates strictly at the application layer and MUST:
 
@@ -206,24 +206,31 @@ As a result, ECIP-1115 is fully backward compatible with all existing Ethereum C
 ECIP-1115 introduces no new consensus-layer behavior and therefore does not alter consensus-level security assumptions. All security considerations are confined to the governance and application layers where smoothing is defined and executed.
 
 #### Governance and Execution Integrity
+
 All payouts associated with smoothing MUST be authorized through the Governor → Timelock → Executor pipeline defined in ECIP-1113. Smoothing modules and Miner Reward Modules MUST NOT contain automatic withdrawal logic, reserve Treasury funds, or bypass governance controls. Any deviation from deterministic, governance-approved execution could undermine the immutability guarantees of ECIP-1112.
 
 #### Treasury Isolation
+
 The Olympia Treasury remains an immutable vault that does not compute, store, or track smoothing allocations. Smoothing MUST NOT introduce new Treasury state, mutate existing state, or alter the Treasury’s withdrawal semantics. All payout requests MUST conform to the existing hash-bound execution model defined in ECIP-1114.
 
 #### Deterministic Computation
+
 Smoothing schedules MUST be derived from deterministic, on-chain computable functions defined through governance. Modules MUST NOT rely on off-chain data sources, external oracles, or discretionary operator input. Non-deterministic or off-chain dependencies could produce inconsistent allocations and undermine the auditability of smoothing behavior.
 
 #### Recipient Identification and Fairness
+
 Any method used to identify miners or mining pools—such as self-declared payout addresses, governance-defined recipients, or hashpower-based attestations—MUST be transparent, deterministic, and fully configurable through OIP. No module MAY introduce privileged recipients, opaque weighting systems, or off-chain veto authority.
 
 #### Overlapping Schedules and Aggregation
+
 Multiple smoothing windows may overlap. Implementations MUST ensure that cumulative allocations are computed deterministically and do not exceed governance-approved limits. Aggregation logic MUST NOT imply future claims on Treasury funds; only governance-approved executions may transfer value.
 
 #### Optionality and Activation Risks
+
 Because smoothing is optional, governance MAY activate or deactivate it at any time. Parameter changes or module replacements SHOULD be evaluated carefully to avoid unexpected shifts in payout schedules. Rapid or uncoordinated parameter changes may affect miner expectations but pose no consensus-level risk.
 
 #### No Miner Entitlements
+
 Smoothing defines intended allocations only. No miner obtains an enforceable right to Treasury funds based on smoothing schedules alone. All payouts require explicit approval through ECIP-1113 and MUST be encoded as standard Treasury calls under ECIP-1114.
 
 ### Implementation Notes
@@ -231,24 +238,30 @@ Smoothing defines intended allocations only. No miner obtains an enforceable rig
 This ECIP defines the framework and invariants for smoothing Treasury-held BASEFEE revenue. It does not mandate a particular contract structure or implementation strategy. The following notes provide guidance for implementers while preserving the modularity and immutability guarantees of ECIP-1112–1114.
 
 #### Smoothing Module Structure
+
 A Smoothing Module MAY be implemented as a standalone smart contract or as a set of coordinating contracts responsible for:
+
 - receiving governance-approved parameters (N, f, L(j), and related configuration),
 - computing intended allocations according to the smoothing model,
-- producing deterministic outputs that can be referenced in governance-approved
-  Treasury withdrawal calls.
+- producing deterministic outputs that can be referenced in governance-approved Treasury withdrawal calls.
 
 The Smoothing Module MUST NOT hold funds, modify Treasury balances, or introduce automatic withdrawal logic.
 
 #### Governance Integration
+
 All parameter updates—such as changes to window length, weighting function, allocation fraction, or payout cadence—MUST be applied through the Olympia Improvement Proposal (OIP) process. Implementers SHOULD design modules with clear on-chain parameter interfaces so governance can update configuration safely and transparently.
 
 #### Deterministic Allocation Outputs
+
 Smoothing outputs SHOULD be expressed as deterministic, on-chain computable values. Implementations MAY store intermediate results or compute allocations on demand, provided that:
+
 - output values are reproducible from historical Treasury-held BASEFEE amounts `B_k` and governance-approved parameters; and
 - no off-chain data sources, randomness, or discretionary operator input is required.
 
 #### Miner Reward Module
+
 A Miner Reward Module MAY be implemented to map intended smoothing allocations to recipient addresses. Such modules SHOULD:
+
 - support on-chain computation of payout shares,
 - accept configuration via OIP,
 - expose deterministic logic only,
@@ -257,17 +270,21 @@ A Miner Reward Module MAY be implemented to map intended smoothing allocations t
 The module MUST NOT reserve Treasury funds, maintain privileged withdrawal authority, or depend on opaque off-chain attestation sources.
 
 #### Interaction With the Treasury
+
 The ECIP-1112 Treasury remains unchanged. Implementations MUST treat the Treasury as an immutable vault that only executes authorized withdrawal calls arriving via the Executor.
 
 Any implementation MUST ensure:
+
 - no direct calls to the Treasury outside the governance pipeline,
 - no alteration of Treasury state or semantics, and
 - no expectation that the Treasury stores smoothing state.
 
 #### Off-Chain Tools
+
 Indexers, dashboards, or analytics tools MAY compute and display projected smoothing schedules. Such tooling is non-normative and MUST NOT be required for correct on-chain operation.
 
 #### Parameter Defaults
+
 This ECIP defines no default parameters. Implementers SHOULD assume all parameter values are unset until supplied via OIP, and SHOULD ensure contract initialization requires explicit, governance-approved activation.
 
 ### Related ECIPs in the Olympia Upgrade
@@ -291,12 +308,14 @@ ECIP-1115 introduces an optional governance-layer mechanism for applying L-curve
 ### References and Related Work
 
 #### Academic Foundation
+
 - **Roughgarden, Tim.**  
   *Transaction Fee Mechanism Design for the Ethereum Blockchain* (2021).  
   Section §8.3 introduces the ℓ-smoothed “pay the base fee forward” mechanism, in which the base-fee revenue from block *k* is distributed evenly across the next ℓ blocks.  
   ECIP-1115 generalizes this concept into a governance-controlled L-curve framework that operates entirely on Treasury-held BASEFEE after consensus-layer deposit.
 
 #### Governance-Layer Precedents (EVM Ecosystem)
+
 The design of ECIP-1115 follows established best practices from major EVM governance systems that implement delayed, scheduled, or parameterized execution at the application layer rather than at consensus. These systems demonstrate that predictable, scheduled payouts and parameterization are best handled through modular governance frameworks.
 
 - **Compound Governor Bravo**  
@@ -317,6 +336,7 @@ The design of ECIP-1115 follows established best practices from major EVM govern
 These systems collectively validate ECIP-1115’s governance-layer approach: smoothing and parameter scheduling belong at the Olympia DAO layer, not in Ethereum Classic consensus.
 
 #### Treasury-Driven Funding Systems (L1/L2 Ecosystem)
+
 Several treasuries across Layer 1 and Layer 2 ecosystems implement structured or scheduled payouts at the governance layer:
 
 - **Arbitrum DAO Treasury** — governance-controlled multi-stage disbursements  
@@ -327,6 +347,7 @@ Several treasuries across Layer 1 and Layer 2 ecosystems implement structured or
 These real-world systems show that **delayed, structured, or rule-based payouts are a well-established governance-layer pattern**, not a consensus-layer mechanism.
 
 #### Alignment With Olympia
+
 The governance-layer smoothing mechanism in ECIP-1115 aligns with these precedents by:
 
 - using delayed execution exclusively through a Governor → Timelock → Executor pipeline,  
