Add focused References & Related Work section to ECIP-1115
This update adds a trimmed and scope-aligned References & Related Work section to ECIP-1115. The new section includes only sources directly relevant to governance-layer smoothing—academic foundations, governance scheduling precedents, DAO-level recurring payout patterns, and alignment with Olympia’s architecture—while excluding examples tied to ECIP-1111 through ECIP-1114 or consensus-layer behavior.

--- a/_specs/ecip-1115.md
+++ b/_specs/ecip-1115.md
@@ -289,21 +289,21 @@ This ECIP defines no default parameters. Implementers SHOULD assume all paramete
 
 ### Related ECIPs in the Olympia Upgrade
 
-ECIP-1115 builds on and extends the Olympia framework introduced in the preceding ECIPs. Each ECIP contributes a distinct layer of the architecture:
+ECIP-1115 builds on the modular Olympia framework defined across ECIPs 1111–1114. Each component provides a distinct layer of the architecture:
 
 - **ECIP-1111 — Olympia EVM and Protocol Upgrades**  
-  Activates EIP-1559 and redirects the `basefee` amount to the Olympia Treasury instead of burning it. This is the source of all BASEFEE revenue available for smoothing.
+  Activates EIP-1559 and redirects the `basefee` amount to the Olympia Treasury. Smoothing operates on Treasury-held BASEFEE as defined in ECIP-1112, independent of transaction type or origin.
 
 - **ECIP-1112 — Olympia Treasury Contract**  
-  Defines the immutable Treasury that receives all consensus-layer `basefee` deposits. Smoothing operates strictly on Treasury-held funds and does not modify Treasury code or access control.
+  Defines the immutable Treasury that receives all consensus-layer `basefee` deposits. Smoothing operates strictly on Treasury-held BASEFEE after deposit and does not alter Treasury code or access control.
 
 - **ECIP-1113 — Olympia DAO Governance Framework**  
-  Establishes the Governor → Timelock → Executor pipeline, which is the exclusive path through which any Treasury withdrawal—including smoothing-related payouts—must be authorized and executed.
+  Establishes the Governor → Timelock → Executor pipeline, which is the exclusive path for authorizing all Treasury withdrawals, including any optional smoothing-related payouts.
 
 - **ECIP-1114 — Ethereum Classic Funding Proposal Process (ECFP)**  
-  Specifies the hash-bound execution format used for Treasury withdrawals. Smoothing-related payouts must be encoded as standard ECIP-1114-compliant execution payloads.
+  Specifies the hash-bound execution format required for all Treasury releases. Any smoothing-derived payout MUST be encoded as a standard ECIP-1114 execution payload.
 
-ECIP-1115 introduces an optional governance-layer mechanism for applying L-curve smoothing to the BASEFEE revenue accumulated under this framework. It does not modify the behavior of ECIP-1111 through ECIP-1114 and can be activated, adjusted, or disabled independently through the OIP process.
+ECIP-1115 adds an optional governance-layer mechanism for applying L-curve smoothing to Treasury-held BASEFEE. It does not modify ECIP-1111 through ECIP-1114 and can be activated, adjusted, or disabled independently through the OIP process.
 
 ### References and Related Work
 
@@ -311,51 +311,50 @@ ECIP-1115 introduces an optional governance-layer mechanism for applying L-curve
 
 - **Roughgarden, Tim.**  
   *Transaction Fee Mechanism Design for the Ethereum Blockchain* (2021).  
-  Section §8.3 introduces the ℓ-smoothed “pay the base fee forward” mechanism, in which the base-fee revenue from block *k* is distributed evenly across the next ℓ blocks.  
-  ECIP-1115 generalizes this concept into a governance-controlled L-curve framework that operates entirely on Treasury-held BASEFEE after consensus-layer deposit.
+  Section §8.3 introduces the ℓ-smoothed “pay the base fee forward” mechanism, distributing per-block revenue across a future window to reduce variance while preserving incentive alignment.  
+  ECIP-1115 adapts this concept into a governance-controlled L-curve applied solely to Treasury-held BASEFEE after consensus-layer deposit.
 
-#### Governance-Layer Precedents (EVM Ecosystem)
+#### Governance-Layer Timing & Scheduling Precedents
 
-The design of ECIP-1115 follows established best practices from major EVM governance systems that implement delayed, scheduled, or parameterized execution at the application layer rather than at consensus. These systems demonstrate that predictable, scheduled payouts and parameterization are best handled through modular governance frameworks.
+ECIP-1115 aligns with established EVM governance patterns in which **timed execution, scheduled payouts, or parameterized release windows** are implemented at the *governance layer* through timelocks or controlled modules:
 
-- **Compound Governor Bravo**  
-  Defines proposal lifecycle, delayed execution, and parameter governance via Timelock scheduling. Widely regarded as the canonical EVM governance pattern and used as a reference point for Olympia’s Governor → Timelock → Executor design.
+- **Compound Governor Bravo** — canonical timed-execution model using a Governor → Timelock → Executor pipeline.  
+- **MakerDAO (MCD + MIPs)** — scheduled executive actions and parameter updates via time-delayed governance spells.  
+- **Aave Governance v2/v3** — modular, timelocked execution for treasury actions and parameter changes.  
+- **ENS DAO** — utilizes standard governance-and-timelock flows for delayed execution of approved actions.
 
-- **MakerDAO (MCD + MIPs Framework)**  
-  Uses on-chain executive delays and scheduled parameter updates for monetary policy and system-wide risk parameters. Maker’s governance-layer execution mirrors the separation adopted in ECIP-1115: delayed, rule-based execution *outside* consensus.
+These systems demonstrate that **temporal control of payouts and actions is a governance-layer function**, not a consensus modification—mirroring ECIP-1115’s placement of smoothing above protocol semantics.
 
-- **Aave Governance v2/v3**  
-  Employs time-locked execution and modular governance contracts for controlled rollout of risk-parameter updates and treasury payouts. Demonstrates the viability of governance-controlled payout scheduling without consensus involvement.
+#### DAO Treasury Timing & Recurring Distribution Patterns
 
-- **ENS DAO**  
-  Uses standard Governor/Timelock patterns and off-chain metadata binding for transparent, scheduled, rule-based execution flows similar to ECIP-1114 and ECIP-1115.
+A range of DAO treasuries implement **recurring, epoch-based, or streaming payouts** through governance-approved mechanisms. These patterns provide practical precedents for ECIP-1115’s role as a **time-smoothing, governance-controlled payout scheduler**:
 
-- **Aragon OSx**  
-  Implements modular governance plugins that perform scheduled actions through permissioned executors, reinforcing the pattern of isolating scheduling and payout logic in governance rather than protocol code.
+- **Arbitrum DAO** — multi-stage incentive programs and periodic distributions approved through governance.  
+- **Optimism RetroPGF** — recurring, epoch-based funding rounds disbursing treasury allocations in structured intervals.  
+- **Celo Community Fund** — configurable, season-based governance allocations over a defined timeframe.  
+- **Mantle Treasury programs** — modular, recurring distributions from treasury controlled by DAO vote.
 
-These systems collectively validate ECIP-1115’s governance-layer approach: smoothing and parameter scheduling belong at the Olympia DAO layer, not in Ethereum Classic consensus.
+These systems show that **temporal structuring of treasury payouts** is common and governance-driven.
 
-#### Treasury-Driven Funding Systems (L1/L2 Ecosystem)
+#### On-Chain Streaming & Programmatic Disbursement Tools
 
-Several treasuries across Layer 1 and Layer 2 ecosystems implement structured or scheduled payouts at the governance layer:
+Modern DAOs increasingly use streaming or vesting mechanisms to smooth treasury outflows over time in a governance-controlled manner:
 
-- **Arbitrum DAO Treasury** — governance-controlled multi-stage disbursements  
-- **Optimism Governance (RetroPGF)** — milestone- and impact-based payouts with staged release  
-- **Celo Community Fund** — governance-controlled fee distribution with configurable cadence  
-- **Mantle Treasury** — sequencer revenue managed via modular governance processes
+- **Superfluid** — real-time streaming of grants, incentives, or salaries under DAO governance, used to distribute treasury funds over predictable intervals.
+- **Hedgey** — on-chain vesting and multi-period distribution tooling widely adopted for structured incentive programs and scheduled treasury disbursements.
 
-These real-world systems show that **delayed, structured, or rule-based payouts are a well-established governance-layer pattern**, not a consensus-layer mechanism.
+These tools demonstrate that smoothing or time-distribution of payouts is now a common **governance-layer** pattern used to manage treasury volatility and cadence—precisely the role ECIP-1115 fills for Treasury-held BASEFEE.
 
-#### Alignment With Olympia
+#### Alignment With Olympia and EVM Best Practices
 
-The governance-layer smoothing mechanism in ECIP-1115 aligns with these precedents by:
+ECIP-1115 follows these governance-layer precedents by:
 
-- using delayed execution exclusively through a Governor → Timelock → Executor pipeline,  
-- treating smoothing outputs as *intended allocations*, never automatic entitlements,  
-- maintaining strong separation between Treasury immutability (ECIP-1112) and governance control (ECIP-1113),  
-- enabling flexible, evolving policy without hard forks or consensus changes.
+- applying a parameterizable timing function (L-curve) exclusively through the Governor → Timelock → Executor pipeline,  
+- treating smoothing outputs as governance-controlled scheduling inputs—not automatic or entitlement-based payouts,  
+- operating solely on Treasury-held funds without altering consensus or modifying ECIP-1112 behavior, and  
+- enabling flexible, adjustable payout policy without any changes to protocol economics.
 
-These patterns reinforce the architectural choice to implement smoothing *on top of* the Olympia governance system rather than embedding it into consensus-layer fee mechanics.
+These properties ensure that smoothing operates entirely at the governance layer, preserves the immutability of the ECIP-1112 Treasury, and introduces no consensus-layer changes.
 
 ### Copyright
 
